# Mandel-Brot

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
.cargo/: config.toml
src/: lib.rs
