[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.4"
features = ['ImageData', 'CanvasRenderingContext2d']

[profile.release]
opt-level = "s"
